# ED2_Trab1

./: CMakeLists.txt  CtrlF.c  CtrlF.h  MAIN PRONTA PARA RODAR.c  Ordena.c  Ordena.h  OrdenaNumeros.c  README.md  contagem interseções.c  contagem_intersecoes.c  contagem_intersecoes.h  ctrlf.c  ctrlf.h  main.c  mainctrlf.c  makefile  matriz.c  matriz.h  ordena.c  ordena.h  texto.txt  trechos.txt
